bitsandbytes/bnb/tests/ui/binrw_on_group_member.stderr
error: group / `#[update]` / `#[builder_only]` fields generate their own binrw attributes; remove the explicit `#[br]`/`#[bw]`/`#[brw]`
 --> tests/ui/binrw_on_group_member.rs:6:5
  |
6 |     a: u4,
  |     ^

warning: unused import: `u4`
 --> tests/ui/binrw_on_group_member.rs:1:17
  |
1 | use bnb::{wire, u4};
  |                 ^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
